--- a/Block_Kontakt3.html
+++ b/Block_Kontakt3.html
@@ -1,101 +1,103 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
- <title>Block_Kontakt3.html</title>
-  <link rel="icon" href="favicona-enitech.png">
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Block_Kontakt3.html</title>
+	<link rel="icon" href="favicona-enitech.png">
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
 
-  <link rel="stylesheet" href="root.css">
-  <link rel="stylesheet" href="kontakt3.css">
-  <link rel="stylesheet" href="animator.css">
+	<link rel="stylesheet" href="root.css">
+	<link rel="stylesheet" href="kontakt3.css">
+	<link rel="stylesheet" href="animator.css">
 
-  <script src="Language.js" defer></script>
-  <script src="animator.js" defer></script>
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
 
 </head>
+
 <body>
-  <div id="Kontakt3-div-src">
-    <div id="id-kontakt3"></div>
-    <div class="kontakt3-body">
-      <h1 class="kontakt3-title" lang-code="05051">.Kontakt</h1>
+	<div id="Kontakt3-div-src">
+		<div id="id-kontakt3"></div>
+		<div class="kontakt3-body">
+			<div class="kontakt3-line"></div>
+			<h1 class="kontakt3-title" lang-code="05051">.Kontakt</h1>
 
-      <div class="kontakt3-grid">
-        <div class="kontakt3-cell align-top" id="id-kontakt-Info">
-          <div class="align-top">
-            <p lang-code="05052">.Všeobecný kontakt:</p>
-          </div>
-          <div class="align-bottom">
-            <p>+421 XXX XXX XXX</p>
-            <p>info@enitech.sk</p>
-          </div>
-        </div>
-        <div class="kontakt3-cell align-top" id="id-kontakt-Deak">
-          <div class="align-top">
-            <p lang-code="05053">.Interná konštrukcia:</p>
-            <p>&nbsp;</p>
-          </div>
-          <div class="align-bottom">
-            <p>Ing. Karol Deák</p>
-            <p>+421 XXX XXX XXX</p>
-            <p>deak@enitech.sk</p>
-          </div>
-        </div>
-        <div class="kontakt3-cell align-top" id="id-kontakt-Kracala">
-          <div class="align-top">
-            <p lang-code="05054">.Externá konštrukcia a IT služby:</p>
-          </div>
-          <div class="align-bottom">
-            <p>Ing. Peter Kráčala</p>
-            <p>+421 XXX XXX XXX</p>
-            <p>kracala@enitech.sk</p>
-          </div>
-        </div>
-        <div class="kontakt3-cell align-top" id="id-kontakt-Ivaska">
-          <div class="align-top">
-            <p lang-code="05054">.Externá konštrukcia a IT služby:</p>
-          </div>
-          <div class="align-bottom">
-            <p>Ing. Jaroslav Ivaška</p>
-            <p>+421 XXX XXX XXX</p>
-            <p>ivaska@enitech.sk</p>
-          </div>
-        </div>
-      </div>
+			<div class="kontakt3-grid">
+				<div class="kontakt3-cell align-top" id="id-kontakt-Info">
+					<div class="align-top">
+						<p lang-code="05052">.Všeobecný kontakt:</p>
+					</div>
+					<div class="align-bottom">
+						<p>+421 XXX XXX XXX</p>
+						<p>info@enitech.sk</p>
+					</div>
+				</div>
+				<div class="kontakt3-cell align-top" id="id-kontakt-Deak">
+					<div class="align-top">
+						<p lang-code="05053">.Interná konštrukcia:</p>
+						<p>&nbsp;</p>
+					</div>
+					<div class="align-bottom">
+						<p>Ing. Karol Deák</p>
+						<p>+421 XXX XXX XXX</p>
+						<p>deak@enitech.sk</p>
+					</div>
+				</div>
+				<div class="kontakt3-cell align-top" id="id-kontakt-Kracala">
+					<div class="align-top">
+						<p lang-code="05054">.Externá konštrukcia a IT služby:</p>
+					</div>
+					<div class="align-bottom">
+						<p>Ing. Peter Kráčala</p>
+						<p>+421 XXX XXX XXX</p>
+						<p>kracala@enitech.sk</p>
+					</div>
+				</div>
+				<div class="kontakt3-cell align-top" id="id-kontakt-Ivaska">
+					<div class="align-top">
+						<p lang-code="05054">.Externá konštrukcia a IT služby:</p>
+					</div>
+					<div class="align-bottom">
+						<p>Ing. Jaroslav Ivaška</p>
+						<p>+421 XXX XXX XXX</p>
+						<p>ivaska@enitech.sk</p>
+					</div>
+				</div>
+			</div>
 
-      <div class="kontakt3-grid-img">
-        <div class="kontakt3-cell align-top"  id="id-kontakt-Holla" style="grid-row: 1;"> <!-- umiestni sa do riadku 2 -->
-          <div class="align-top">
-            <p lang-code="05055">.Personálne oddelenie:</p>
-            <p>&nbsp;</p>
-          </div>
-          <div class="align-bottom">
-            <p>Ing. Lucia Hollá</p>
-            <p>+421 XXX XXX XXX</p>
-            <p>holla@enitech.sk</p>
-          </div>
-        </div>
-        <div class="kontakt3-cell-img" style="grid-row: 1 / 3;"> <!-- zacni v 1.riadku a natiahni sa az do zaciatku 3.riadku (cize zaberie 2 riadky) -->
-          <img class="kontakt3-image" src="media/working-from-home-time-management-concept.avif" alt="Ilustračný obrázok" />
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="scrolly_save.js" type="text/javascript" defer></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      await LoadTranslations('translations05-kontakt.txt');
-      await UpdateTexts();
-      await new Promise(requestAnimationFrame);
-      restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
-      highlightContact('id-kontakt-Info');
-      highlightContact('id-kontakt-Deak');
-      highlightContact('id-kontakt-Kracala');
-      highlightContact('id-kontakt-Ivaska');
-      document.body.style.visibility = "visible"; // zobraz stránku až teraz    
-    });
-  </script>
+			<div class="kontakt3-grid-img">
+				<div class="kontakt3-cell align-top" id="id-kontakt-Holla" style="grid-row: 1;"> <!-- umiestni sa do riadku 2 -->
+					<div class="align-top">
+						<p lang-code="05055">.Personálne oddelenie:</p>
+						<p>&nbsp;</p>
+					</div>
+					<div class="align-bottom">
+						<p>Ing. Lucia Hollá</p>
+						<p>+421 XXX XXX XXX</p>
+						<p>holla@enitech.sk</p>
+					</div>
+				</div>
+				<div class="kontakt3-cell-img" style="grid-row: 1 / 3;"> <!-- zacni v 1.riadku a natiahni sa az do zaciatku 3.riadku (cize zaberie 2 riadky) -->
+					<img class="kontakt3-image" src="media/working-from-home-time-management-concept.avif" alt="Ilustračný obrázok" />
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="scrolly_save.js" type="text/javascript" defer></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => {
+			await LoadTranslations('translations05-kontakt.txt');
+			await UpdateTexts();
+			await new Promise(requestAnimationFrame);
+			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
+			highlightContactsFromHash();
+			Animator.registerAll(".kontakt3-line", "animate-width-grow");
+			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
+		});
+	</script>
 </body>
+
 </html>
