--- a/indexKontakt.html
+++ b/indexKontakt.html
@@ -86,6 +86,8 @@
 			await kontakt2_leaflet_init_map_pobocky();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#id-kontakt1-animate-content", "animate-slide-in-bounce");
+			Animator.registerAll(".kontakt2-line", "animate-width-grow");
+			Animator.registerAll(".kontakt3-line", "animate-width-grow");
 			Animator.register("#id-kontakt2-animate-content", "animate-rotateFlipIn");
 			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 			Animator.registerAll(".footer-line", "animate-width-grow");
