--- a/Block_EnginExt1.html
+++ b/Block_EnginExt1.html
@@ -33,7 +33,7 @@
       <div class="enginext1-content">
         <div class="enginext1-left">
           <div class="enginext1-left-group ">
-            <img src="media/modern-robotic-manual-manufacturing-assembly.png" class="enginext1-img1" />
+            <img src="media/climatization-unit.avif" class="enginext1-img1" />
           </div>
         </div>
 
