--- a/Block_Footer.html
+++ b/Block_Footer.html
@@ -28,13 +28,13 @@
 <body>
 	<div id="Footer-div-src">
 		<!-- Úvodný blok -->
-		<div class="footer-hero-header">
+		<!-- <div class="footer-hero-header">
 			<div class="footer-line"></div>
 			<div class="footer-hero-content" id="id-footer-hero-content">
 				<h2 lang-code="09001">.Váš partner v inžinierstve a IT</h2>
 				<p lang-code="09002">.Kde sa inovácie stretávajú s odbornosťou</p>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- Footer -->
 		<footer class="footer">
