--- a/Block_Ref2.html
+++ b/Block_Ref2.html
@@ -85,7 +85,7 @@
 						<!-- <img src="media/ai-generated-commercial-airplane-flying-through-the-clouds.avif" class="ref2-img1" /> -->
 					</div>
 					<div style="text-align: right;">
-						<a href="#id_refMenu" lang-code="07020">Späť k menu</a>
+						<a href="#id_refMenu" lang-code="07020">Hore k menu</a>
 					</div>
 				</div>
 
