--- a/Block_Uvod1.html
+++ b/Block_Uvod1.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Block_Uvod1.html</title>
-  <link rel="icon" href="favicona-enitech.png">
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
-  <style>
-    body {
-      margin: 0;
-      padding: 1rem;
-      background-color: white;
-      color: black;
-      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;    
-    }
-  </style>
-  <link rel="stylesheet" href="uvod1.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Block_Uvod1.html</title>
+	<link rel="icon" href="favicona-enitech.png">
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
+	<style>
+		body {
+			margin: 0;
+			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
+		}
+	</style>
+	<link rel="stylesheet" href="uvod1.css">
 </head>
+
 <body>
-  <div id="Uvod1-div-src">
-    <div class="uvod1-grid-container">
-      <div class="uvod1-left-column">
-        <h2 lang-code="00121">Hľadáte skúseného a spoľahlivého partnera?</h2>
-        <p lang-code="00122">Zistite, ako môžu naše IT a inžinierske služby podporovať inovácie a efektivitu vo vašej organizácii. Neváhajte osloviť náš predajný tím a zavolajte na preskúmanie možností</p>
-        <button class="uvod1-contact-button" onclick="location.href='indexKontakt.html'" lang-code="00123">Kontaktujte nás</button>
-      </div>
-      <div class="uvod1-right-column">
-        <video class="uvod1-hero-video" autoplay muted loop playsinline>
-          <source src="media/PrezentaciaSpozaSkla.mp4" type="video/mp4">
-        </video>
-      </div>
-    </div>
-  </div>
+	<div id="Uvod1-div-src">
+		<div class="uvod1-body">
+			<div class="uvod1-flex-container">
+				<div class="uvod1-left-column">
+					<h2 lang-code="00121">Hľadáte skúseného, spoľahlivého a flexibilného partnera?</h2>
+					<p lang-code="00122">Naše IT a inžinierske služby zvyšujú efektivitu a prinášajú inovácie v organizáciách naprieč Európou.</p>
+					<p lang-code="00123">Dohodnite si s nami nezáväznú konzultáciu a zistite, aké riešenia vieme pripraviť pre vás.</p>
+					<p>
+						<strong lang-code="00124">Napíšte, alebo zavolajte nám ešte dnes.</strong><br>
+						<span lang-code="00125">Radi preskúmame možnosti spolupráce priamo pre vašu firmu.</span>
+					</p>
+					<div class="uvod1-contact-button-wrapper">
+						<button class="uvod1-contact-button" onclick="location.href='indexKontakt.html'" lang-code="00128">Napíšte nám</button>
+						<button class="uvod1-contact-button" onclick="location.href='indexKontakt.html#id-kontakt-Deak,id-kontakt-Kracala,id-kontakt-Ivaska'" lang-code="00129">Zavolajte</button>
+					</div>
+				</div>
+				<div class="uvod1-right-column">
+					<div class="uvod1-right-img-wrapper">
+						<div class="uvod1-right-img">
+							<img src="media/PisanieNaNotebookuModre-80-15.avif" alt="Obrazok 1" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
