--- a/indexEngin.html
+++ b/indexEngin.html
@@ -106,7 +106,7 @@
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#engin_animate-id", "animate-slide-in-bounce");
-			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 			Animator.registerAll(".footer-line", "animate-width-grow");
 			Animator.registerAll(".enginint1-header-line", "animate-width-grow");
 			Animator.registerAll(".enginint2-header-line", "animate-width-grow");
