--- a/indexIT.html
+++ b/indexIT.html
@@ -100,7 +100,7 @@
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#IT_animate-id", "animate-slide-in-bounce");
-			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 			Animator.registerAll(".it1-line", "animate-width-grow");
 			Animator.registerAll(".it2-line", "animate-width-grow");
 			Animator.registerAll(".it3-line", "animate-width-grow");
