--- a/indexKariera.html
+++ b/indexKariera.html
@@ -83,7 +83,7 @@
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#kariera_animate-id", "animate-slide-in-bounce");
-			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 			Animator.registerAll(".footer-line", "animate-width-grow");
 			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
 			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
