--- a/indexManage.html
+++ b/indexManage.html
@@ -90,7 +90,7 @@
 			// Spustenie animácie
 			Animator.registerAll(".footer-line", "animate-width-grow");
 			Animator.register("#management_animate-id", "animate-slide-in-bounce");
-			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 			Animator.register("#id-Manag_animate-line", "animate-width-grow"); // doprava rastuce ciary
 			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
 			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
