--- a/Block_Klienti.html
+++ b/Block_Klienti.html
@@ -1,112 +1,124 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vybraní klienti</title>
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
-  <style>
-    body {
-      margin: 0;
-      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
-    }
-  </style>
-  <link rel="stylesheet" href="klienti.css">  
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Vybraní klienti</title>
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
+
+	<link rel="stylesheet" href="animator.css">
+	<style>
+		body {
+			margin: 0;
+			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
+		}
+	</style>
+	<link rel="stylesheet" href="klienti.css">
+	<script src="animator.js" defer></script>
 </head>
+
 <body>
-  <div id="Klienti-div-src">
-    <div class="klienti-wrapper">
-        <div class="klienti-body">
-          <div id="id-klienti-animate" style="transform-style: preserve-3d; transform: rotateX(-90deg) rotateY(10deg);">
-            <p lang-code="00301">SPOLUPRÁCA</p>
-            <h2 lang-code="00302">Vybraní zákazníci</h2>
-          </div>
-            
-            <div class="klienti-grid">    
-                <!-- 1. trojica -->
-                <div class="klienti-triple">
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/airbus-logo-enitech-white.png" alt="airbus" />
-                        <img class="hidden_photo" src="media/klienti/airbus-logo-enitech.png" alt="airbus" />
-                    </div>
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/edag-logo-enitech-white.png" alt="edag" />
-                        <img class="hidden_photo" src="media/klienti/edag-logo-enitech.png" alt="edag" />
-                    </div>
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/active-solution-logo-enitech-white.png" alt="active solutions" />
-                        <img class="hidden_photo" src="media/klienti/active-solution-logo-enitech.png" alt="active solutions" />
-                    </div>
-                </div>
-              
-                 <!-- 2. trojica -->
-                <div class="klienti-triple">
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/audi-logo-enitech-white.png" alt="audi" />
-                        <img class="hidden_photo" src="media/klienti/audi-logo-enitech.png" alt="audi" />
-                    </div>
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/honeywell-logo-enitech-white.png" alt="honeywell" />
-                        <img class="hidden_photo" src="media/klienti/honeywell-logo-enitech.png" alt="honeywell" />
-                    </div>
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/raiffeisen-bank-logo-enitech-white.png" alt="raiffeisen bank" />
-                        <img class="hidden_photo" src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="raiffeisen bank" />
-                    </div>
-                </div>
+	<div id="Klienti-div-src">
+		<div class="klienti-wrapper">
+			<div class="klienti-body">
+				<div id="id-klienti-animate" style="transform-style: preserve-3d; transform: rotateX(-90deg) rotateY(10deg);">
+					<p lang-code="00301">SPOLUPRÁCA</p>
+					<h2 lang-code="00302">Vybraní zákazníci</h2>
+				</div>
 
-                <!-- 3. trojica -->
-                <div class="klienti-triple">
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/krauss-maffei-logo-enitech-white.png" alt="kraus maffei" />
-                        <img class="hidden_photo" src="media/klienti/krauss-maffei-logo-enitech.png" alt="krauss maffei" />
-                    </div>
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/skoda-logo-enitech-white.png" alt="škoda" />
-                        <img class="hidden_photo" src="media/klienti/skoda-logo-enitech.png" alt="škoda" />
-                    </div>
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/bmw-logo-enitech-white.png" alt="bmw" />
-                        <img class="hidden_photo" src="media/klienti/bmw-logo-enitech.png" alt="bmw" />
-                    </div>
-                </div>
+				<div class="klienti-grid">
+					<!-- 1. trojica -->
+					<div class="klienti-triple">
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/airbus-logo-enitech-white.png" alt="airbus" />
+							<img class="hidden_photo" src="media/klienti/airbus-logo-enitech.png" alt="airbus" />
+						</div>
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/edag-logo-enitech-white.png" alt="edag" />
+							<img class="hidden_photo" src="media/klienti/edag-logo-enitech.png" alt="edag" />
+						</div>
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/active-solution-logo-enitech-white.png" alt="active solutions" />
+							<img class="hidden_photo" src="media/klienti/active-solution-logo-enitech.png" alt="active solutions" />
+						</div>
+					</div>
 
-                <!-- 4. trojica -->
-                <div class="klienti-triple">
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/atos-logo-enitech-white.png" alt="atos" />
-                        <img class="hidden_photo" src="media/klienti/atos-logo-enitech.png" alt="atos" />
-                    </div>
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/schindler-logo-enitech-white.png" alt="schindler" />
-                        <img class="hidden_photo" src="media/klienti/schindler-logo-enitech.png" alt="schindler" />
-                    </div>
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/cellent-logo-enitech-white-1.png" alt="cellent" />
-                        <img class="hidden_photo" src="media/klienti/cellent-logo-enitech-1.png" alt="cellent" />
-                    </div>
-                </div>
+					<!-- 2. trojica -->
+					<div class="klienti-triple">
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/audi-logo-enitech-white.png" alt="audi" />
+							<img class="hidden_photo" src="media/klienti/audi-logo-enitech.png" alt="audi" />
+						</div>
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/honeywell-logo-enitech-white.png" alt="honeywell" />
+							<img class="hidden_photo" src="media/klienti/honeywell-logo-enitech.png" alt="honeywell" />
+						</div>
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/raiffeisen-bank-logo-enitech-white.png" alt="raiffeisen bank" />
+							<img class="hidden_photo" src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="raiffeisen bank" />
+						</div>
+					</div>
 
-                <!-- 5. trojica -->
-                <div class="klienti-triple">
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/magna-steyr-logo-enitech-white.png" alt="magna steyr" />
-                        <img class="hidden_photo" src="media/klienti/magna-steyr-logo-enitech.png" alt="magna steyr" />
-                    </div>
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/konstrukta-logo-enitech-white.png" alt="konštrukta" />
-                        <img class="hidden_photo" src="media/klienti/konstrukta-logo-enitech.png" alt="konštrukta" />
-                    </div>
-                    <div class="klienti-hover-box">
-                        <img class="visible_photo" src="media/klienti/white/brz-logo-enitech-white.png" alt="daikin" />
-                        <img class="hidden_photo" src="media/klienti/brz-logo-enitech.png" alt="daikin" />
-                    </div>
-                </div>
+					<!-- 3. trojica -->
+					<div class="klienti-triple">
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/krauss-maffei-logo-enitech-white.png" alt="kraus maffei" />
+							<img class="hidden_photo" src="media/klienti/krauss-maffei-logo-enitech.png" alt="krauss maffei" />
+						</div>
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/skoda-logo-enitech-white.png" alt="škoda" />
+							<img class="hidden_photo" src="media/klienti/skoda-logo-enitech.png" alt="škoda" />
+						</div>
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/bmw-logo-enitech-white.png" alt="bmw" />
+							<img class="hidden_photo" src="media/klienti/bmw-logo-enitech.png" alt="bmw" />
+						</div>
+					</div>
 
-            </div>
-      </div>
-    </div>
-  </div>
+					<!-- 4. trojica -->
+					<div class="klienti-triple">
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/atos-logo-enitech-white.png" alt="atos" />
+							<img class="hidden_photo" src="media/klienti/atos-logo-enitech.png" alt="atos" />
+						</div>
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/schindler-logo-enitech-white.png" alt="schindler" />
+							<img class="hidden_photo" src="media/klienti/schindler-logo-enitech.png" alt="schindler" />
+						</div>
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/cellent-logo-enitech-white-1.png" alt="cellent" />
+							<img class="hidden_photo" src="media/klienti/cellent-logo-enitech-1.png" alt="cellent" />
+						</div>
+					</div>
+
+					<!-- 5. trojica -->
+					<div class="klienti-triple">
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/magna-steyr-logo-enitech-white.png" alt="magna steyr" />
+							<img class="hidden_photo" src="media/klienti/magna-steyr-logo-enitech.png" alt="magna steyr" />
+						</div>
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/konstrukta-logo-enitech-white.png" alt="konštrukta" />
+							<img class="hidden_photo" src="media/klienti/konstrukta-logo-enitech.png" alt="konštrukta" />
+						</div>
+						<div class="klienti-hover-box">
+							<img class="visible_photo" src="media/klienti/white/brz-logo-enitech-white.png" alt="daikin" />
+							<img class="hidden_photo" src="media/klienti/brz-logo-enitech.png" alt="daikin" />
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => {
+			Animator.register("#id-klienti-animate", "animate-rotateFlipIn");
+			document.body.style.visibility = "visible";
+		});    
+	</script>
 </body>
+
 </html>
