--- a/Block_Menu.html
+++ b/Block_Menu.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
   <title>Block_Menu.html</title>
   <link rel="icon" href="favicona-enitech.png">
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="fonts-poppins.css" />
   <link rel="stylesheet" href="fonts-open-sans.css">
   <style>
@@ -20,8 +19,7 @@
   <link rel="stylesheet" href="menu.css">
   <link rel="stylesheet" href="UvodHero.css">
 
-  <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMContentLoaded-->
-  <script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
+  <script src="menu.js" defer></script>
   <script src="Language.js" defer></script>
   <script src="animator.js" defer></script>
 </head>
@@ -33,9 +31,6 @@
         <img src="media/logo-biela-30px-enitech.png" alt="Logo Enitech">
       </div>
       <div class="uvod-topbar-langs">
-        <!-- <span class="uvod-lang" onclick="setLang('sk')">🇸🇰</span>
-        <span class="uvod-lang" onclick="setLang('de')">🇩🇪</span>
-        <span class="uvod-lang" onclick="setLang('en')">🇬🇧</span> -->
         <span class="uvod-lang" onclick="setLang('sk')">
           <img src="media/Flag_SK.svg" alt="SK" />
         </span>
@@ -88,6 +83,7 @@
       <div class="uvod-hero-content" id="uvod-hero_animate-id">
         <h1 lang-code="00110">.Váš spoľahlivý  partner pre služby v oblasti inžinieringu a IT</h1>
         <p lang-code="00111">.Spoľahlivá a efektívna podpora v oblasti riešení technických úloh doma aj v zahraničí.</p>
+		<p></p>
       </div>
     </section>
   </div>
