--- a/Block_Ref1.html
+++ b/Block_Ref1.html
@@ -231,7 +231,7 @@
 						</div>
 					</div>
 					<div style="text-align: right;">
-						<a href="#id_refMenu" lang-code="07020">Späť k menu</a>
+						<a href="#id_refMenu" lang-code="07020">Hore k menu</a>
 					</div>
 				</div>
 			</div>
