--- a/indexKontakt.html
+++ b/indexKontakt.html
@@ -89,7 +89,7 @@
 			Animator.registerAll(".kontakt2-line", "animate-width-grow");
 			Animator.registerAll(".kontakt3-line", "animate-width-grow");
 			Animator.register("#id-kontakt2-animate-content", "animate-rotateFlipIn");
-			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 			Animator.registerAll(".footer-line", "animate-width-grow");
 			// *** nový blok: oprava scrollu podľa hashu (ak je) ***
 			if (window.location.hash) {
