--- a/Block_Engin.html
+++ b/Block_Engin.html
@@ -33,7 +33,7 @@
   <div id="Engin-div-src">
     <section class="uvod-hero" style="background-image: url('media/CinankaDlheVlasyZozadu_2display-CAD.jpg');">
       <div class="uvod-hero-content" id="engin_animate-id">
-        <h1 lang-code="01001">.End-to-end inžinierstvo</h1>
+        <h1 lang-code="01001">Komplexné inžinierske riešenia</h1>
         <p lang-code="01002">.Spoľahlivá a efektívna podpora v oblasti technických riešení doma aj v zahraničí.</p>
       </div>
     </section>
