--- a/Block_EnginInt1.html
+++ b/Block_EnginInt1.html
@@ -1,79 +1,99 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Block_EnginInt1.html</title>
-  <link rel="icon" href="favicona-enitech.png" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Block_EnginInt1.html</title>
+	<link rel="icon" href="favicona-enitech.png" />
 
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="enginint1.css">
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
+	<link rel="stylesheet" href="animator.css">
+	<link rel="stylesheet" href="enginint1.css">
 
-  <script src="Language.js" defer></script>
-  <script src="animator.js" defer></script>
-  <style>
-    body {
-      visibility: hidden; 
-      margin: 0;
-      padding: 0;
-      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
-    }
-  </style>
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
+	<style>
+		body {
+			visibility: hidden;
+			margin: 0;
+			padding: 0;
+			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
+		}
+	</style>
 </head>
+
 <body>
-  <div id="EnginInt1-div-src">
-    <div class="enginint1-body">
-      <div class="enginint1-header-line"></div>
-      <p style="font-size:larger" lang-code="01101">Spoľahlivá a efektívna podpora v oblasti konštrukčných prác doma aj v zahraničí.</p>
+	<div id="EnginInt1-div-src">
+		<div class="enginint1-body">
+			<div class="enginint1-header-line"></div>
+			<!-- <p style="font-size:larger" lang-code="01101">Spoľahlivá a efektívna podpora v oblasti konštrukčných prác doma aj v zahraničí.</p> -->
+			<h2 style="font-weight: 200" lang-code="01101">Spoľahlivá a efektívna podpora v oblasti konštrukčných prác doma aj v zahraničí.</h2>
 
-      <div class="enginint1-content">
-        <div class="enginint1-left">
-          <div class="enginint1-left-inner">
+			<div class="enginint1-content">
+				<div class="enginint1-left">
+					<!-- <div class="enginint1-left-inner">
             <h2 lang-code="01102">Interná konštrukcia</h2>
-          </div>
-        </div>
+          </div> -->
+					<div class="enginint1-img-wrapper">
+						<img src="media/InternaKonstr-traja-monitor.avif" alt="Obrazok" />
+					</div>
+				</div>
 
-        <div class="enginint1-divider"></div>
+				<div class="enginint1-divider"></div>
 
-        <div class="enginint1-right">
-          <p><strong lang-code="01104">.Naši špecialisti pracujú na projektoch so systémami:</strong></p>
-            <div class="enginint1-icon-row" aria-label="Three logos" role="img">
-                <div class="enginint1-hexagon">
-                    <img src="media/Logo_Catia.png" alt="Catia logo" />
-                </div>
-                <div class="enginint1-hexagon">
-                    <img src="media/Logo_SolidWorks.png" alt="SolidWorks logo" />
-                </div>
-                <div class="enginint1-hexagon">
-                    <img src="media/Logo_AutodeskInventor.png" alt="AutodeskInventor logo" />
-                </div>
-            </div>
-          <p>
-            <strong lang-code="01105">.Poskytujeme komplexné riešenia a individuálny prístup vo všetkých etapách vývoja</strong>
-            <span lang-code="01106"> - od konštrukčného návrhu, jeho doladenia a úprav, až po vypracovanie kompletnej výkresovej dokumentácie.</span>
-          </p>
-          <p lang-code="01107">.Spolupracujeme najmä s firmami z leteckého priemyslu, automobilového priemyslu a všeobecného strojárstva.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+				<div class="enginint1-right">
+					<h3 lang-code="01104">.Naši špecialisti pracujú s rôznymi systémami:</h3>
+					<p class="enginint1-big "><strong lang-code="01105">interné projekty:</strong></p>
+					<div class="enginint1-icon-row" aria-label="Two logos" role="img">
+						<div class="enginint1-hexagon">
+							<img src="media/Logo_Catia.png" alt="Catia logo" />
+						</div>
+						<div class="enginint1-hexagon">
+							<img src="media/Logo_3Dexperience.png" alt="SolidWorks logo" />
+						</div>
+					</div>
+					<p>
+						<strong class="enginint1-big " lang-code="01106">externé projekty:</strong>
+						<strong lang-code="01107">podľa požiadavky napr.:</strong>
+					</p>
+					<div class="enginint1-icon-row" aria-label="Three logos" role="img">
+						<div class="enginint1-hexagon">
+							<img src="media/Logo_SolidWorksColor.png" alt="Catia logo" />
+						</div>
+						<div class="enginint1-hexagon">
+							<img src="media/Logo_SiemensNX.png" alt="SolidWorks logo" />
+						</div>
+						<div class="enginint1-hexagon">
+							<img src="media/Logo_AutodeskInventor.png" alt="AutodeskInventor logo" />
+						</div>
+					</div>
+					<p>
+						<strong lang-code="01108">.Poskytujeme komplexné riešenia a individuálny prístup vo všetkých etapách vývoja</strong>
+						<span lang-code="01109"> - od konštrukčného návrhu, jeho doladenia a úprav, až po vypracovanie kompletnej výkresovej dokumentácie.</span>
+					</p>
+					<p lang-code="01110">.Spolupracujeme najmä s firmami z leteckého priemyslu, automobilového priemyslu a všeobecného strojárstva.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
-  <script> 
-    async function loadAllTranslations() {
-      const p1 = await LoadTranslations('translations01-engin.txt');
-      await Promise.all([p1]);
-    }
-  </script>
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      await loadAllTranslations();
-      await UpdateTexts();
-      await new Promise(requestAnimationFrame);
-      Animator.registerAll(".enginint1-header-line", "animate-width-grow");
-      document.body.style.visibility = "visible";
-    });
-  </script>
+	<script>
+		async function loadAllTranslations() {
+			const p1 = await LoadTranslations('translations01-engin.txt');
+			await Promise.all([p1]);
+		}
+	</script>
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => {
+			await loadAllTranslations();
+			await UpdateTexts();
+			await new Promise(requestAnimationFrame);
+			Animator.registerAll(".enginint1-header-line", "animate-width-grow");
+			document.body.style.visibility = "visible";
+		});
+	</script>
 </body>
+
 </html>
